Fix action-button alignment in Chrome

--- a/indico/web/client/styles/partials/_tables.scss
+++ b/indico/web/client/styles/partials/_tables.scss
@@ -251,7 +251,7 @@ td, th {
     }
 
     a.action-icon {
-        margin: 0 0.5em;
+        margin-right: 5px;
 
         &:first-child {
             margin-left: 0;
